tests/parser/invalid/err_missing_rbrace.c
int main() {
// missing } → “expected '}' to close block”